@@ -1,3 +1,12 @@
+2018-09-21  Jer Noble  <jer.noble@apple.com>
+
+        Move AVVideoPerformanceMetrics into AVFoundationSPI.h
+        https://bugs.webkit.org/show_bug.cgi?id=189842
+
+        Reviewed by Jon Lee.
+
+        * pal/spi/mac/AVFoundationSPI.h:
+
 2018-09-21  Jonathan Bedard  <jbedard@apple.com>
 
         Bring up queues for iOS 12 (Build fix)
