@@ -1,3 +1,12 @@
+2018-09-21  Jer Noble  <jer.noble@apple.com>
+
+        Move AVVideoPerformanceMetrics into AVFoundationSPI.h
+        https://bugs.webkit.org/show_bug.cgi?id=189842
+
+        Reviewed by Jon Lee.
+
+        * platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
+
 2018-09-21  Chris Dumez  <cdumez@apple.com>
 
         WebSQL: User cannot grant quota increase if the JS provides an expected usage value that is too low
